--- a/.github/Index.html
+++ b/.github/Index.html
@@ -1,20 +1,43 @@
-   <html lang="pt-br">
-   <head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>Agendamento - Barbearia</title>
-       <link rel="stylesheet" href="style.css">
-   </head>
-   <body>
-       <h1>Agende seu horário</h1>
-       <form id="form-agendamento">
-           <input type="text" id="nome" placeholder="Seu nome" required>
-           <input type="datetime-local" id="data" required>
-           <button type="submit">Agendar</button>
-       </form>
-       <h2>Horários Agendados</h2>
-       <ul id="lista-agendamentos"></ul>
-       <script src="script.js"></script>
-   </body>
-   </html> 
-  
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Barbearia HM</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            <img src="img/logo.png" alt="Logo Barbearia HM">
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="produtos.html">Produtos</a>
+            <a href="contato.html">Contato</a>
+        </nav>
+    </header>
+
+    <section class="banner">
+        <img src="img/banner.jpg" alt="Ambiente da Barbearia">
+        <div class="cta">
+            <h1>Transforme seu estilo conosco</h1>
+            <a href="https://wa.me/5511999999999" class="btn-agendar" target="_blank">Agende seu horário</a>
+        </div>
+    </section>
+
+    <section class="sobre">
+        <h2>Sobre Nós</h2>
+        <p>Na Barbearia HM, oferecemos cortes modernos e tradicionais, com atendimento personalizado em um ambiente acolhedor.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Barbearia Estilo Fino | Todos os direitos reservados</p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">Facebook</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+            <a href="https://wa.me/5511999999999" target="_blank">WhatsApp</a>
+        </div>
+    </footer>
+</body>
+</html>
